Initial refactor of ActiveActor to inherit from Element